feat(sidebar): add collapse functionality

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div class="flex w-screen h-screen text-slate-50 bg-slate-800">
-  <app-sidebar class="w-2/12"></app-sidebar>
+  <app-sidebar class=""></app-sidebar>
   <div class="flex-1 py-4 pr-4">
     <div class="w-full h-full rounded-xl bg-slate-50">
       <!-- children -->
