--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,8 +1,9 @@
 <div class="flex w-screen h-screen text-slate-50 bg-slate-800">
   <app-sidebar class=""></app-sidebar>
   <div class="flex-1 py-4 pr-4">
-    <div class="w-full h-full rounded-xl bg-slate-50">
-      <!-- children -->
+    <div class="w-full h-full overflow-hidden rounded-xl bg-slate-50">
+      <div class="w-full h-16 bg-indigo-600"></div>
+      <router-outlet />
     </div>
   </div>
 </div>
