--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -3,19 +3,19 @@
     <h3 class="text-xl font-bold my-2">Cadastro de usuário</h3>
 
     <div class="md:flex gap-2">
-      <div class="flex flex-col gap-1 mb-2 w-8/12">
+      <div class="input-wrapper w-8/12">
         <label for="fullname">Nome completo</label>
         <input
           type="text"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         />
       </div>
-      <div class="flex flex-col gap-1 mb-2 mr-5 w-4/12">
+      <div class="input-wrapper mr-5 w-4/12">
         <label for="genre">Gênero</label>
         <select
           name="genre"
           id="genre"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         >
           <option disabled selected></option>
           <option value="cisgender">Cisgenero</option>
@@ -25,27 +25,27 @@
       </div>
     </div>
     <div class="md:flex gap-2">
-      <div class="flex flex-col gap-1 mb-2 w-4/12">
+      <div class="input-wrapper w-4/12">
         <label for="cpf">CPF</label>
         <input
           type="text"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         />
       </div>
-      <div class="flex flex-col gap-1 mb-2 w-4/12">
+      <div class="input-wrapper w-4/12">
         <label for="phone">Telefone</label>
         <input
           type="text"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         />
       </div>
 
-      <div class="flex flex-col gap-1 mb-2 mr-5 w-4/12">
+      <div class="input-wrapper mr-5 w-4/12">
         <label for="genre">Tipo</label>
         <select
           name="type"
           id="type"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         >
           <option disabled selected></option>
           <option value="administrator">Administrador</option>
@@ -55,18 +55,18 @@
       </div>
     </div>
     <div class="md:flex gap-2">
-      <div class="flex flex-col gap-1 mb-2 w-8/12">
+      <div class="input-wrapper w-8/12">
         <label for="email">E-mail</label>
         <input
           type="text"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         />
       </div>
-      <div class="flex flex-col gap-1 mb-2 mr-5 w-4/12">
+      <div class="input-wrapper mr-5 w-4/12">
         <label for="password">Senha</label>
         <input
           type="text"
-          class="border border-slate-800 px-3 py-2 text-slate-800 rounded"
+          class="input-field"
         />
       </div>
     </div>
