--- a/src/app/components/stats/stats-list/stats-list.component.html
+++ b/src/app/components/stats/stats-list/stats-list.component.html
@@ -14,22 +14,9 @@
       <div class="pl-3 w-3/12">Plano de Saúde</div>
       <div class="px-3 w-1/12"></div>
     </div>
-    <div
+    <app-stats-table-row
       *ngFor="let details of data; index as i"
-      class="flex items-center text-slate-500 border-t border-slate-300"
-    >
-      <div
-        class="w-10 py-2 flex justify-center items-center text-slate-800 border-r border-slate-300"
-      >
-        {{ i + 1 }}
-      </div>
-      <div class="flex-grow pl-3">Joaquim da Silva Santos Albuquerque</div>
-      <div class="pl-1 w-1/12">24 anos</div>
-      <div class="pl-1 w-2/12">(48) 9 9911-9911</div>
-      <div class="pl-1 w-3/12">UNIMED</div>
-      <div class="px-3 w-1/12 h-full bg-slate-600 text-slate-50 py-2">
-        <button>Detalhes</button>
-      </div>
-    </div>
+      [id]="i + 1"
+    />
   </div>
 </ng-template>
