--- a/src/app/components/stats/patients-card/patients-card.component.html
+++ b/src/app/components/stats/patients-card/patients-card.component.html
@@ -5,7 +5,7 @@
     <ng-icon name="ionPersonCircle" class="mx-auto text-6xl" />
     <p class="truncate text-lg font-medium">{{ name }}</p>
     <div class="flex justify-between text-sm text-slate-400 italic">
-      <p>{{ age }}</p>
+      <p *ngIf="age">{{ age }}</p>
       <p>{{ phone }}</p>
     </div>
     <p class="text-slate-400 font-medium">{{ healthInsurance }}</p>
