feat(exam): update layout component and app-routing

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -2,7 +2,7 @@
   <app-sidebar class=""></app-sidebar>
   <div class="flex-1 py-4 pr-4">
     <div class="w-full h-full rounded-xl bg-slate-50">
-      <!-- children -->
+      <app-exam></app-exam>
     </div>
   </div>
 </div>
