--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -1,1 +1,90 @@
-<p>exam works!</p>
+<div class="text-slate-800 container m-auto py-4 pl-14 pr-2">
+  <form>
+    <h3 class="text-xl font-bold my-2">Cadastro de exames</h3>
+
+    <div class="md:flex gap-2">
+      <div class="input-wrapper w-6/12">
+        <label for="examName">Nome do Exame</label>
+        <input
+          type="text"
+          class="input-field"
+          name="examName"
+          id="examName"
+          formControlName=""
+        />
+      </div>
+
+      <div class="input-wrapper mr-5 w-6/12">
+        <label for="examType">Tipo do Exame</label>
+        <input
+          type="text"
+          class="input-field"
+          name="examType"
+          id="examType"
+          formControlName=""
+        />
+      </div>
+    </div>
+
+    <div class="md:flex gap-2">
+      <div class="input-wrapper w-3/12">
+        <label for="examDate">Data do Exame</label>
+        <input
+          type="date"
+          class="input-field"
+          name="examDate"
+          id="examDate"
+          formControlName=""
+        />
+      </div>
+
+      <div class="input-wrapper w-3/12">
+        <label for="examHour">Hora do Exame</label>
+        <input
+          type="time"
+          class="input-field"
+          name="examHour"
+          id="examHour"
+          formControlName=""
+        />
+      </div>
+
+      <div class="input-wrapper mr-5 w-6/12">
+        <label for="laboratory">Laboratório</label>
+        <input
+          type="text"
+          class="input-field"
+          name="laboratory"
+          id="laboratory"
+          formControlName=""
+        />
+      </div>
+    </div>
+
+    <div class="md:flex gap-2">
+      <div class="input-wrapper mr-5 w-full">
+        <label for="documentUrl">URL do documento</label>
+        <input
+          type="url"
+          class="input-field"
+          name="documentUrl"
+          id="documentUrl"
+          formControlName=""
+        />
+      </div>
+    </div>
+
+    <div class="md:flex gap-2">
+      <div class="input-wrapper mr-5 w-full">
+        <label for="results">Resultados</label>
+        <textarea
+          class="input-field"
+          name="results"
+          id="results"
+          rows="5"
+          formControlName=""
+        ></textarea>
+      </div>
+    </div>
+  </form>
+</div>
