refactor(exam): change error messages

--- a/src/app/pages/exam/exam.component.html
+++ b/src/app/pages/exam/exam.component.html
@@ -16,17 +16,13 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examName')?.errors?.['required'] && formsExamRegister.get('examName')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examName')?.errors">
-            Por favor insira o nome do exame!
-          </p>
+          <p>Por favor insira o nome do exame!</p>
         </div>
         <div
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examName')?.errors?.['minlength'] && formsExamRegister.get('examName')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examName')?.errors">
-            O nome do exame deve possuir no mínimo 8 caracteres!
-          </p>
+          <p>O nome do exame deve possuir no mínimo 8 caracteres!</p>
         </div>
       </div>
 
@@ -43,17 +39,13 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examType')?.errors?.['required'] && formsExamRegister.get('examType')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examType')?.errors">
-            Por favor insira o tipo do exame!
-          </p>
+          <p>Por favor insira o tipo do exame!</p>
         </div>
         <div
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examType')?.errors?.['minlength'] && formsExamRegister.get('examType')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examType')?.errors">
-            O tipo do exame deve possuir no mínimo 4 caracteres!
-          </p>
+          <p>O tipo do exame deve possuir no mínimo 4 caracteres!</p>
         </div>
       </div>
     </div>
@@ -72,9 +64,7 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examDate')?.errors?.['required'] && formsExamRegister.get('examDate')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examDate')?.errors">
-            Por favor insira a data do exame!
-          </p>
+          <p>Por favor insira a data do exame!</p>
         </div>
       </div>
 
@@ -91,9 +81,7 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('examHour')?.errors?.['required'] && formsExamRegister.get('examHour')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('examHour')?.errors">
-            Por favor insira a hora do exame!
-          </p>
+          <p>Por favor insira a hora do exame!</p>
         </div>
       </div>
 
@@ -110,17 +98,13 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('laboratory')?.errors?.['required'] && formsExamRegister.get('laboratory')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('laboratory')?.errors">
-            Por favor insira o laboratório!
-          </p>
+          <p>Por favor insira o laboratório!</p>
         </div>
         <div
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('laboratory')?.errors?.['minlength'] && formsExamRegister.get('laboratory')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('laboratory')?.errors">
-            O laboratório deve possuir no mínimo 4 caracteres!
-          </p>
+          <p>O laboratório deve possuir no mínimo 4 caracteres!</p>
         </div>
       </div>
     </div>
@@ -152,17 +136,13 @@
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('results')?.errors?.['required'] && formsExamRegister.get('results')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('results')?.errors">
-            Por favor insira o resultado!
-          </p>
+          <p>Por favor insira o resultado!</p>
         </div>
         <div
           class="text-red-500 font-semibold"
           *ngIf="formsExamRegister.get('results')?.errors?.['minlength'] && formsExamRegister.get('results')?.touched"
         >
-          <p *ngIf="formsExamRegister.get('results')?.errors">
-            O resultado deve possuir no mínimo 16 caracteres!
-          </p>
+          <p>O resultado deve possuir no mínimo 16 caracteres!</p>
         </div>
       </div>
     </div>
