feat(patient): add masks

--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -30,7 +30,8 @@
           name="birthdate"
           id="birthdate"
           formControlName=""
-          placeholder="dd/MM/aaaa"
+          placeholder="dd/mm/aaaa"
+          mask="d0/M0/0000"
         />
       </div>
       <div class="input-wrapper mr-5 w-2/12">
@@ -42,6 +43,7 @@
           id="cpf"
           formControlName=""
           placeholder="000.000.000-00"
+          mask="000.000.000-00"
         />
       </div>
     </div>
@@ -107,6 +109,7 @@
           id="phone"
           formControlName=""
           placeholder="(99) 9 9999-9999"
+          mask="(00) 0 0000-0000"
         />
       </div>
       <div class="input-wrapper w-3/12">
@@ -118,6 +121,7 @@
           id="emergencyContact"
           formControlName=""
           placeholder="(99) 9 9999-9999"
+          mask="(00) 0 0000-0000"
         />
       </div>
       <div class="input-wrapper w-3/12">
@@ -171,7 +175,8 @@
           name="healthInsuranceValidity"
           id="healthInsuranceValidity"
           formControlName=""
-          placeholder="dd/MM/aaaa"
+          placeholder="dd/mm/aaaa"
+          mask="d0/M0/0000"
         />
       </div>
     </div>
