refactor(patient): add state in html form

--- a/src/app/pages/patient/patient.component.html
+++ b/src/app/pages/patient/patient.component.html
@@ -225,7 +225,17 @@
     </div>
 
     <div class="md:flex gap-2">
-      <div class="input-wrapper w-4/12">
+      <div class="input-wrapper w-3/12">
+        <label for="state">Estado</label>
+        <input
+          type="text"
+          class="input-field"
+          name="state"
+          id="state"
+          formControlName=""
+        />
+      </div>
+      <div class="input-wrapper w-3/12">
         <label for="cep">CEP</label>
         <input
           type="text"
@@ -235,7 +245,7 @@
           formControlName=""
         />
       </div>
-      <div class="input-wrapper w-4/12">
+      <div class="input-wrapper w-3/12">
         <label for="complement">Complemento</label>
         <input
           type="text"
@@ -245,7 +255,7 @@
           formControlName=""
         />
       </div>
-      <div class="input-wrapper mr-5 w-4/12">
+      <div class="input-wrapper mr-5 w-3/12">
         <label for="referencePoint">Ponto de Referência</label>
         <input
           type="text"
